--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "zilt-chat",
+    "name": "Zilt Chat",
     "slug": "zilt-chat",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
+        "backgroundColor": "#ffffff",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
@@ -22,6 +22,7 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
+      "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
@@ -30,13 +31,29 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+          "image": "./assets/images/splash.png",
+          "resizeMode": "cover",
           "backgroundColor": "#ffffff",
           "dark": {
+            "image": "./assets/images/splash-dark.png",
+            "resizeMode": "cover",
             "backgroundColor": "#000000"
           }
+        }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "node_modules/@expo-google-fonts/itim/400Regular/Itim_400Regular.ttf",
+            "node_modules/@expo-google-fonts/itim/300Light/Itim_300Light.ttf",
+            "node_modules/@expo-google-fonts/itim/200ExtraLight/Itim_200ExtraLight.ttf",
+            "node_modules/@expo-google-fonts/roboto/400Regular/Roboto_400Regular.ttf",
+            "node_modules/@expo-google-fonts/roboto/500Medium/Roboto_500Medium.ttf",
+            "node_modules/@expo-google-fonts/roboto/700SemiBold/Roboto_600SemiBold.ttf",
+            "node_modules/@expo-google-fonts/roboto/700Bold/Roboto_700Bold.ttf",
+            "node_modules/@expo-google-fonts/roboto/800ExtraBold/Roboto_800ExtraBold.ttf"
+          ]
         }
       ]
     ],
