--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo-google-fonts/itim": "^0.4.1",
     "@expo-google-fonts/roboto": "^0.4.1",
@@ -22,13 +24,22 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.58.0",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.13.1",
+    "date-fn": "^0.0.2",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.12",
     "expo-constants": "~18.0.9",
+    "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-editor": "^1.7.1",
+    "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
     "expo-router": "^6.0.10",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -40,24 +51,32 @@
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-native": "0.81.4",
+    "react-native-blob-util": "^0.23.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
+    "react-native-tab-view": "^4.2.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
-    "tw-animate-css": "^1.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.2"
   },
   "private": true
