--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.1",
+    "base-64": "^1.0.0",
     "date-fn": "^0.0.2",
     "date-fns": "^4.1.0",
     "expo": "^54.0.12",
@@ -46,6 +47,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "^15.0.8",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
@@ -56,7 +58,9 @@
     "react-hot-toast": "^2.6.0",
     "react-native": "0.81.4",
     "react-native-blob-util": "^0.23.2",
+    "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.1",
@@ -67,12 +71,18 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
+  "resolutions": {
+    "react": "19.1.0",
+    "react-native": "0.81.4"
+  },
   "devDependencies": {
+    "@types/base-64": "^1.0.2",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
