--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
@@ -62,12 +63,15 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.9.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
     "react-native-tab-view": "^4.2.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
@@ -83,6 +87,8 @@
   },
   "devDependencies": {
     "@types/base-64": "^1.0.2",
+    "@types/lodash": "^4.17.20",
+    "@types/qs": "^6.14.0",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
