--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo-google-fonts/roboto-flex": "^0.4.1",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -30,8 +31,10 @@
     "base-64": "^1.0.0",
     "date-fn": "^0.0.2",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.15.0",
     "expo": "^54.0.12",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.17",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -39,6 +42,7 @@
     "expo-image-editor": "^1.7.1",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
     "expo-router": "^6.0.10",
@@ -47,6 +51,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "^15.0.8",
+    "joi": "^18.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
@@ -56,6 +61,7 @@
     "react": "19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-native": "0.81.4",
     "react-native-blob-util": "^0.23.2",
@@ -64,6 +70,7 @@
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.1.1",
@@ -79,6 +86,7 @@
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "resolutions": {
