--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.15.0",
     "expo": "^54.0.12",
+    "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.17",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.8",
+    "expo-gl": "~16.0.7",
+    "expo-gl-cpp": "~11.3.0",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-image-editor": "^1.7.1",
@@ -103,5 +106,10 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "unrs-resolver"
+    ]
+  }
 }
