--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo-google-fonts/roboto": "^0.4.1",
     "@expo-google-fonts/roboto-flex": "^0.4.1",
     "@expo/metro-runtime": "~6.1.2",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -32,17 +32,14 @@
     "date-fn": "^0.0.2",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.15.0",
-    "expo": "^54.0.12",
+    "expo": "^54.0.23",
     "expo-asset": "~12.0.9",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.17",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.8",
-    "expo-gl": "~16.0.7",
-    "expo-gl-cpp": "~11.3.0",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
-    "expo-image-editor": "^1.7.1",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
@@ -79,9 +76,8 @@
     "react-native-reanimated": "^4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.2.0",
-    "react-native-vector-icons": "^10.3.0",
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
@@ -89,12 +85,8 @@
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.12",
+    "zod": "^3.23.8",
     "zustand": "^5.0.8"
-  },
-  "resolutions": {
-    "react": "19.1.0",
-    "react-native": "0.81.4"
   },
   "devDependencies": {
     "@types/base-64": "^1.0.2",
