--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.horllymobile.ziltchat",
+      "bundleIdentifier": "com.ziltchat.app",
       "backgroundColor": "#553636"
     },
     "android": {
@@ -23,7 +23,7 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "permissions": ["android.permission.RECORD_AUDIO"],
-      "package": "com.horllymobile.ziltchat",
+      "package": "com.ziltchat.app",
       "intentFilters": [
         {
           "action": "VIEW",
