--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "emoji-picker-react": "^4.15.0",
     "expo": "^54.0.23",
     "expo-asset": "~12.0.9",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.17",
     "expo-file-system": "^19.0.17",
