--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "buffer": "^6.0.3",
     "date-fn": "^0.0.2",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.7",
     "emoji-picker-react": "^4.15.0",
     "expo": "^54.0.23",
     "expo-asset": "~12.0.9",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.17",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.8",
@@ -70,6 +72,7 @@
     "react-native": "0.81.5",
     "react-native-blob-util": "^0.23.2",
     "react-native-css-interop": "^0.2.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
@@ -97,6 +100,8 @@
     "@types/lodash": "^4.17.20",
     "@types/qs": "^6.14.0",
     "@types/react": "~19.1.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "tw-animate-css": "^1.4.0",
